update api-spec + regenerate backend
