# api-spec.yaml
@@ -179,61 +179,36 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/GetGenresResponse"
+
   get-unique-id:
     get:
       summary:  "Used to get a string to identify a user"
-      description: "Returns a string that unosuely identifies a user. This string is required for logging."
+      description: "Returns a string that uniquely identifies a user. This string is required for logging."
       operationId: "GetUniqueId"
       produces:
         - "text/plain"
-      parameters: 
-        - in: query
-          required: true
-          name: appVersion
-          description: "the version of the app for which a new user id has to be generated"
-          type: string
-          enum: 
-          - without_feed
-          - with_feed
       responses: 
         "200":
           description: "succesful operation"
           example: "EEADSISCHIQI"
-  start-time:
+          
+  log-timing-result:
     post:
       summary: "start logging time for a user"
       consumes: 
         - "text/plain"
       parameters:
         - in: body
-          name: userId
-          description: The identifier of the user for which to start timing.
+          name: timingResult
+          description: The timingresult to be logged for this user.
           schema:
-            type: string
-            example: "EEADSISCHIQI"
+            $ref: '#/definitions/TimingResult'
+          
       responses:
         "201": 
           description: Started timing
-        "500": 
-          description: Unknown user
-  
-  stop-time:
-    post:
-      summary: "start logging time for a user"
-      consumes: 
-        - "text/plain"
-      parameters:
-        - in: body
-          name: userId
-          description: The identifier of the user for which to stop timing.
-          schema:
-            type: string
-            example: "EEADSISCHIQI"
-      responses:
-        "201": 
-          description: Stopped timing
-        "500": 
-          description: Unknown user of not timing for this user
+        "400": 
+          description: Bad request
     
   timing-results:
     get:
@@ -244,10 +219,10 @@ paths:
         - application/json
       responses:
         "200":
+          description: succesful operation
           schema:
-            $ref: "#/definitions/TimingResults"
+            $ref: '#/definitions/TimingResults'
 
-              
 definitions:
   PodcastFull:
     type: "object"
@@ -1221,8 +1196,39 @@ definitions:
         url3:
           type: string
           description: Url affiliated with this podcast
-
-  TimingResults:
+  
+  TimingResult:
+    type: object
+    properties:
+      user_id:
+        type: string
+        description: the unique identifier of this user
+      app_version:
+        type: string
+        enum:
+          - without_feed
+          - with_feed
+        description: the version of the app that this user uses
+      time:
+        type: integer
+        description: the time (in seconds) between the user staring op the app and playing/queueing an episode
+      action:
+        type: string
+        enum:
+          - play
+          - queue
+        description: The action this user takes to end the logging of time. Either playing an episode or adding it to the queue.
+      view:
+        type: string
+        enum:
+          - feed
+          - podcast details
+          - search results
+          - more like this
+          - liked
+        description: The view from which the user has carried out the action to stop logging the time.
+     
+  TimingResults:   
     type: object
     properties:
       datetime: 
@@ -1231,16 +1237,6 @@ definitions:
       results:
         type: array
         description: The logging data
-        items:
-          type: object
-          properties:
-            user_id:
-              type: string
-              description: the unique identifier of this user
-            app_version:
-              type: string
-              enum: ["without_feed", "with_feed"]
-              description: the version of the app that this user uses
-            time:
-              type: integer
-              description: the time (in seconds) between the user staring op the app and playing/queueing an episode
+        items: 
+          $ref: '#/definitions/TimingResult'
+      
