# backend/go/model_timing_result.go
@@ -1,0 +1,23 @@
+/*
+ * Podcast Recommender app
+ *
+ * This is the API for the podcast recommender app. The API used to get all data is Listen Notes (https://www.listennotes.com/api/)
+ *
+ * API version: 1.0.0
+ * Contact: joren.sjongers@icloud.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type TimingResult struct {
+	// the unique identifier of this user
+	UserId string `json:"user_id,omitempty"`
+	// the version of the app that this user uses
+	AppVersion string `json:"app_version,omitempty"`
+	// the time (in seconds) between the user staring op the app and playing/queueing an episode
+	Time int32 `json:"time,omitempty"`
+	// The action this user takes to end the logging of time. Either playing an episode or adding it to the queue.
+	Action string `json:"action,omitempty"`
+	// The view from which the user has carried out the action to stop logging the time.
+	View string `json:"view,omitempty"`
+}
